# CBCT_Nerve_Canal_Detection

./: CMakeLists.txt  README.md  mainwindow.ui
15-2-/forms/: mainwindow.ui
15-2-/include/: All_Librarries.h  Arc_Creator.h  SceneManger.h  cvQtconvert.h  naturalSort.h  scene.h
15-2-/src/: Arc_Creator.cpp  main.cpp
New UI/: mainwindow.cpp  mainwindow.ui
OLD FILES/: CMakeLists.txt
OLD FILES/forms/: mainwindow.ui
OLD FILES/include/: mainwindow.h
OLD FILES/src/: main.cpp  mainwindow.cpp
Resources/: Resource.md
Test Files/: CMakeLists.txt
Test Files/15-2-/: CMakeLists.txt
Test Files/15-2-/forms/: mainwindow.ui
Test Files/15-2-/include/: SceneManger.h  mainwindow.h  scene.h
Test Files/15-2-/src/: SceneManager.cpp  main.cpp  mainwindow.cpp  scene.cpp
Test Files/GP_Panorama/: CMakeLists.txt
Test Files/GP_Panorama/src/: main.cpp
Test Files/Panorama/src/: main.cpp
Test Files/include/: All_Librarries.h  Arc_Creator.h
Test Files/old_files/include/: GGCM.h  mainwindow.h  scene.h
Test Files/old_files/src/: mainwindow.cpp
Test Files/src/: GGCM.cpp  main.cpp  scene.cpp
Test Files/test_ui/include/: FileManager.h  ImageContainer.h  ImageProcess.h
Test Files/test_ui/src/: FileManager.cpp  ImageContainer.cpp  main.cpp
final build/: CMakeLists.txt
final build/forms/: mainwindow.ui
final build/include/: DicomTags.hpp  imageManager.h  imageprocess.h  mainwindow.h  panorama.h  scene.h  statistics.hpp
final build/src/: DicomTags.cpp  imageManager.cpp  imageprocess.cpp  mainwindow.cpp  panorama.cpp  scene.cpp  statistics.cpp
forms/: mainwindow.ui
include/: mainwindow.h
kmeansWindow/forms/: dialog2.ui  mainwindow.ui
kmeansWindow/include/: dialog2.h  mainwindow.h
kmeansWindow/src/: dialog2.cpp  mainwindow.cpp
src/: main.cpp  mainwindow.cpp
tags/: scene.cpp  scene.h  tags.cpp  tags.h
